--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>The Hacking Morpion</title>
+        <title>HumanBojack</title>
         <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Lobster">
         <link rel="stylesheet" type="text/css" href="./style.css" />
     </head>
     <body>
-        <h1 class="title">The Hacking Morpion</h1>
         <section class="game-grid">
             <div class="cell" id="A1"></div>
             <div class="cell" id="A2"></div>
